# jataware-ta4-polymer

./: .docker-compose.locals.sample  .docker-compose.locals.samples  .gitignore  Makefile  README.md  docker-compose.autogeoref.yaml  docker-compose.baseline_mpm.yaml  docker-compose.dev.yaml  docker-compose.elastic.yaml  docker-compose.jataware_auto_legend.yaml  docker-compose.jataware_georef.yaml  docker-compose.locals.yaml  docker-compose.minio.yaml  docker-compose.network.yaml  docker-compose.postgis.yaml  docker-compose.redis.yaml  docker-compose.segment_api.yaml  docker-compose.silk.yaml  init.sql
services/auto-georef/: .env-sample  .gitignore  Dockerfile  README.md  logging.yaml  policy.xml  pyproject.toml
services/auto-georef/auto_georef/: models.py  settings.py  templates.py
services/auto-georef/auto_georef/cli/: buckets.py  create_es_index.py  update_legend_map_units.py
services/auto-georef/auto_georef/common/: generate_ids.py  map_utils.py  segment_utils.py  shapefile_extraction.py  tiff_cache.py  utils.py
services/auto-georef/auto_georef/es/: __init__.py
services/auto-georef/auto_georef/georef/: autogeoreferencer.py
services/auto-georef/auto_georef/http/: api.py  middleware.py  router.py
services/auto-georef/auto_georef/http/routes/: cache.py  cma.py  health.py  map.py  segment.py
services/auto-georef/auto_georef/http/views/: __init__.py  cmas.py  common.py  features.py  index.py  points_lines.py  sgmc.py
services/auto-georef/auto_georef/redisapi/: __init__.py
services/auto-georef/auto_georef/templates/cma/: details.html.jinja  index.html.jinja  stats-charts.html.jinja
services/auto-georef/auto_georef/templates/features/: index.html.jinja  job-status.html.jinja
services/auto-georef/auto_georef/templates/index/: global-maps-stats.html.jinja  index.html.jinja  map-actions-updated-cma.html.jinja  map-actions.html.jinja  map-list-empty.html.jinja  map-list-error.html.jinja  map-list-stats-available.html.jinja  map-list-stats.html.jinja  map-list.html.jinja  map-result-download.html.jinja
services/auto-georef/auto_georef/templates/points_lines/: create-select.html.jinja  group-select.html.jinja  groups.html.jinja  index.html.jinja
services/auto-georef/auto_georef/templates/sgmc/: index.html.jinja
services/auto-georef/auto_georef/templates/shared/: _browse-tabs.html.jinja  _head.html  _nav.html  _page.html  _subpage.html  modal.html.jinja  (+1 more)
services/auto-georef/dev/: embeds.py  run.py  script.py
services/auto-georef/scripts/: README.md  bulk_georef2.py  bulk_georeference.py  capture_original_crs_info.sh  create_elasticsearch_indexes.py  create_elasticsearch_indexes2.py  process_geo_folder.py  requirements.txt
services/auto-georef/scripts/server_data/: files.txt  geo.txt  geo1.txt
services/auto-georef/tests/: test_views_index.py
services/auto-georef/ui/: .env-sample  .gitignore  README.md  bun.lockb  charts.html  jest.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.js
services/auto-georef/ui/src/: all_pages.ts  clipboard.ts  cma_autocomplete.ts  color-contrast.js  common.ts  geo.ts  htmx.ts  index_page.ts  label_tab_fix.ts  line_samples.ts  points_lines_page.ts  rSlider.css  rSlider.js  rock_units_autocomplete.ts  shapefile_parser.ts  state_autocomplete.ts  styleguide.ts  tailwind_input.css  uploadMap.ts
services/auto-georef/ui/test/: geo.test.ts  packaging.test.ts  shapefile_parser.test.ts
services/baseline_mpm/: .env-sample  .gitignore  Dockerfile  README.md  logging.yaml  pyproject.toml  run.sh
services/baseline_mpm/baseline_mpm/: baseline.py  settings.py
services/baseline_mpm/baseline_mpm/http/: api.py  router.py
services/baseline_mpm/dev/: run.py  script.py
services/baseline_mpm/payloads/: new.json  test.json
services/baseline_mpm/scripts/: false_color.py
services/jataware_auto_legend/: .env-sample  .gitignore  Dockerfile  README.md  pyproject.toml  test.sh
services/jataware_auto_legend/dev/: run.py  script.py
services/jataware_auto_legend/jataware_auto_legend/: settings.py
services/jataware_auto_legend/jataware_auto_legend/common/: utils.py
services/jataware_auto_legend/jataware_auto_legend/http/: api.py  router.py
services/jataware_auto_legend/payloads/: test.json
services/jataware_auto_legend/scripts/: _cache_model.py
services/jataware_georef/: .env-sample  Dockerfile  README.md  pyproject.toml
services/jataware_georef/jataware_georef/: settings.py
services/jataware_georef/jataware_georef/common/: map_utils.py  utils.py
services/jataware_georef/jataware_georef/georef/: autogeoreferencer.py  helpers.py  ocr_model.py  segment_model.py
services/jataware_georef/jataware_georef/http/: api.py  middleware.py  router.py
services/jataware_georef/jataware_georef/models/: prune_model.pkl
services/register-polymer/: .env_sample  .gitignore  README.md  pyproject.toml
services/register-polymer/register_polymer/: register.py  register_settings.py
services/segment_api/: .env-sample  .flake8  .gitignore  Dockerfile  pyproject.toml
services/segment_api/dev/: embeds.py  run.py  script.py
services/segment_api/segment_api/: settings.py
services/segment_api/segment_api/common/: embed_lock.py  segment_utils.py  tiff_cache.py  utils.py
services/segment_api/segment_api/http/: api.py  router.py
services/segment_api/segment_api/redisapi/: __init__.py
services/silk/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
services/silk/dev/: run.py  script.py
services/silk/scripts/: format.sh  lint.sh
services/silk/silk/: cdrops.py  settings.py  templates.py
services/silk/silk/common/: s3_utils.py  utils.py
services/silk/silk/db/: db.py  models.py
services/silk/silk/embeds/: store.py
services/silk/silk/http/: api.py  router.py
services/silk/silk/pdf/: utils.py
services/silk/ui/: .eslintrc.cjs  .gitignore  README.md  bun.lockb  input.css  package-lock.json  package.json  tailwind.config.js  vite.config.js
services/silk/ui/src/: alpine.js  cdr_search_page.js  clips_page.js  doc_page.js  htmx.js  info_page.js  mupdf.js  themechanger.js
(+273 files in other folders)
