[tool.poetry]
name = "auto-georef"
version = "0.1.0"
description = ""
authors = ["scott <scott@jataware.com>"]
readme = "README.md"
packages = [
         {include = "auto_georef"},
         {include = "auto_georef/**/*.py"}
 ]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.103.0"
pandas = "^2.1.0"
pydantic-settings = "^2.0.3"
rasterio= {version = "1.3.8", extras = ["s3"]}
six="1.16.0"
mercantile="1.2.1"
pyproj="3.6.0"
rioxarray="0.15.0"
shapely="2.0.1"
shortuuid="1.0.11"
albumentations="1.2.1"
numpy="1.25.2"
PyYAML="6.0.1"
python-dotenv = "1.0.0"
pytesseract="0.3.10"
elasticsearch="^7.0"
pymupdf = "1.23.4"
cdr_schemas = { git = "https://github.com/DARPA-CRITICALMAAS/cdr_schemas.git", tag = "v0.2.6+draft" }


boto3 = "^1.28.52"
wand = "^0.6.13"
python-multipart = "^0.0.6"
openpyxl = "^3.1.2"
imagehash = "^4.3.1"
pillow = "^10.1.0"
cachetools = "^5.3.2"
httpx = "^0.26.0"


[tool.poetry.scripts]
dev = "dev.run:main"
format = "dev.script:format"
lint = "dev.script:lint"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-print = "^5.0.0"
autoflake = "^2.2.0"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
