[tool.poetry]
name = "auto-georef"
version = "0.1.0"
description = ""
authors = ["scott <scott@jataware.com>"]
readme = "README.md"
packages = [{ include = "auto_georef" }, { include = "auto_georef/**/*.py" }]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
fastapi = "^0.109.0"
pandas = "^2.1.0"
pydantic-settings = "^2.0.3"
six = "1.16.0"
mercantile = "1.2.1"
pyproj = "3.6.1"
rioxarray = "0.15.0"
shapely = "2.0.1"
shortuuid = "1.0.11"
numpy = "1.26.2"
PyYAML = "6.0.1"
python-dotenv = "1.0.0"
pytesseract = "0.3.10"
elasticsearch = "^7.0"
pymupdf = "1.24.7"
cdr_schemas = { git = "https://github.com/DARPA-CRITICALMAAS/cdr_schemas.git", tag = "v0.4.16" }
boto3 = "^1.28.52"
wand = "^0.6.13"
python-multipart = "^0.0.6"
openpyxl = "^3.1.2"
pillow = "^10.1.0"
cachetools = "^5.3.2"
httpx = "^0.26.0"
jinja2 = "^3.1.4"
humanize = "^4.9.0"
humanfriendly = "^10.0"
redis = "^5.0.5"
opencv-python = "^4.10.0.84"
opencv-python-headless = "^4.10.0.84"
imagecodecs = "^2024.6.1"
transformers = "^4.41.2"
tifffile = "^2024.7.24"
geopandas = "^1.0.1"
rasterio = { version = "1.3.8", extras = ["s3"] }

[tool.poetry.scripts]
dev = "dev.run:main"
embeds = "dev.embeds:main"
format = "dev.script:format"
lint = "dev.script:lint"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-print = "^5.0.0"
autoflake = "^2.2.0"
uvicorn = "^0.23.2"
pytest = "^8.2.2"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
