[tool.poetry]
name = "baseline_mpm"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"
packages = [
         {include = "baseline_mpm"},
         {include = "baseline_mpm/**/*.py"}
 ]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
httpx = "^0.27.0"
pillow = "^10.1.0"
pydantic-settings = "^2.2.1"
pyproj = "^3.6.1"
rasterio = "^1.3.9"
ngrok = "^1.2.0"
cdr_schemas = { git = "https://github.com/DARPA-CRITICALMAAS/cdr_schemas.git", tag = "v0.4.18" }
rich = "^13.7.1"
tifffile = "^2024.7.24"
imagecodecs = "^2024.6.1"
openpyxl = "^3.1.5"
shapely = "^2.0.5"
matplotlib = "^3.9.1.post1"
pandas = "^2.2.2"
geopandas = "^1.0.1"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"
rcode = {git = "https://github.com/bkj/rcode"}
pyyaml = "^6.0.2"

[tool.poetry.scripts]
dev = "dev.run:main"
format = "dev.script:format"
lint = "dev.script:lint"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
autoflake = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

