[tool.poetry]
name = "jataware-auto-legend"
version = "0.0.1"
description = ""
authors = ["bkj <ben@jataware.com>", "zeek <zeek@jataware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-dotenv = "^1.0.1"
rasterio = "^1.3.9"
uvicorn = "^0.23.2"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
PyYAML="6.0.1"
boto3 = "^1.28.52"
cdr_schemas = { git = "https://github.com/DARPA-CRITICALMAAS/cdr_schemas.git", tag = "v0.4.18" }
auto_legend = { path = "./external/auto_legend" }
rich = "^13.9.4"
rich-pixels = "^3.0.1"

[tool.poetry.scripts]
dev = "dev.run:main"
format = "dev.script:format"
lint = "dev.script:lint"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-print = "^5.0.0"
autoflake = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
