[tool.poetry]
name = "jataware-georef"
version = "0.1.0"
description = ""
authors = ["marshHawk4 <kyle@jataware.com>"]
readme = "README.md"
packages = [
         {include = "jataware_georef"},
         {include = "jataware_georef/**/*.py"}
 ]


[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
numpy = "^1.26.4"
rasterio = "^1.3.9"
uvicorn = "^0.23.2"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
pyproj = "^3.6.1"
httpx = "^0.26.0"
pillow = "^10.1.0"
shapely="2.0.1"
PyYAML="6.0.1"
boto3 = "^1.28.52"
cdr_schemas = { git = "https://github.com/DARPA-CRITICALMAAS/cdr_schemas.git", tag = "v0.4.12" }
albumentations="1.2.1"
segmentation-models-pytorch="0.3.0"
torch = [
      {url = "https://download.pytorch.org/whl/cpu/torch-2.2.1%2Bcpu-cp311-cp311-linux_x86_64.whl#sha256=6bc973d5632374b92b4b293817b4d2ff8c8ce1c784c748b471dba1fffcd9c333", platform = "linux", python = ">=3.11 <3.12" },
      {url = "https://download.pytorch.org/whl/cpu/torch-2.2.1-cp311-none-macosx_11_0_arm64.whl", platform = "darwin", python = ">=3.11 <3.12", markers="platform_machine == \"arm64\""},
      {url = "https://download.pytorch.org/whl/cpu/torch-2.2.1-cp311-none-macosx_10_9_x86_64.whl", platform = "darwin", python = ">=3.11 <3.12", markers="platform_machine == \"x86_64\""}
      ]
torchvision = [
      {url = "https://download.pytorch.org/whl/cpu/torchvision-0.17.1%2Bcpu-cp311-cp311-linux_x86_64.whl#sha256=7dbe91c25cec4444729f8d73109b661be2a0df68c6dccd6d42b0c38653caafd2", platform = "linux", python = ">=3.11 <3.12"},
      {url = "https://download.pytorch.org/whl/cpu/torchvision-0.17.1-cp311-cp311-macosx_11_0_arm64.whl", platform = "darwin", python = ">=3.11 <3.12", markers="platform_machine == \"arm64\""},
      {url = "https://download.pytorch.org/whl/cpu/torchvision-0.17.1-cp311-cp311-macosx_10_13_x86_64.whl", platform = "darwin", python = ">=3.11 <3.12", markers="platform_machine == \"x86_64\""}

]

[tool.poetry.scripts]
dev = "dev.run:main"
format = "dev.script:format"
lint = "dev.script:lint"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
flake8-print = "^5.0.0"
autoflake = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
